Update blog post descriptions and cover images for clarity and consistency

--- a/src/data/blog/arquitectura-tecnologia-desarrollo-ecommerce-guia-parte-1.mdx
+++ b/src/data/blog/arquitectura-tecnologia-desarrollo-ecommerce-guia-parte-1.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Part 1: Tecnología, Arquitectura y Desarrollo"
-description: "Exploramos la arquitectura técnica de Arbelleza: Next.js, NestJS, Algolia y PostgreSQL. Conoce cómo construimos un e-commerce de belleza escalable y de alto rendimiento con Docker y Vercel."
+description: "Arquitectura de Arbelleza: e-commerce de belleza creado con Next.js, NestJS y PostgreSQL, optimizado para rendimiento y escalabilidad."
 cover: "https://res.cloudinary.com/jeffercbs/image/upload/f_auto,q_auto/v1/jeffercbs/pimnb2x7xmzebuaqry9z"
 createdAt: "02/06/2025"
 type: "youtube"
 videoId: "vvv3hn_w72M"
 tags:
-    - Desarrollo
-    - Youtube
+    - desarrollo
+    - youtube
 ---
 
 
