--- a/src/data/blog/bienvenida-blog-programacion-tutoriales-desarrollo-web.mdx
+++ b/src/data/blog/bienvenida-blog-programacion-tutoriales-desarrollo-web.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Hola Mundo"
-description: "articulo de bienvenida al blog"
-cover: "./images/banner.webp"
+description: "Bienvenidos a mi blog de programación donde compartiré todo lo que se de desarrollo web. Acompáñame y sigume para que no te pierdas de nada."
+cover: "https://res.cloudinary.com/jeffercbs/image/upload/f_auto,q_auto/v1/jeffercbs/qtbvq2ddiln50uonhukt"
 createdAt: "01/12/2023"
 medium: "https://medium.com/@jeffercbs/hola-mundo-fd1508be7289"
 tags:
