--- a/src/data/blog/compilador-go-typescript-10x-mas-rapido.mdx
+++ b/src/data/blog/compilador-go-typescript-10x-mas-rapido.mdx
@@ -1,12 +1,13 @@
 ---
 title: "TypeScript: Nuevo compilador nativo en Go"
-description: "Nuevo compilador nativo de TypeScript implementado en Go, que promete reducir los tiempos de compilación hasta 10 veces. Analizamos por qué el equipo de desarrollo eligió este lenguaje frente a otras alternativas y detallamos el calendario de lanzamiento hacia TypeScript 7.0."
+description: "Análisis del nuevo compilador de TypeScript en Go que promete compilaciones 10 veces más rápidas y su camino hacia TS 7.0."
+medium: "https://jeffercbs.medium.com/nuevo-compilador-nativo-en-go-promete-velocidades-10x-m%C3%A1s-r%C3%A1pidas-c2454bc5deea"
 cover: "https://res.cloudinary.com/jeffercbs/image/upload/f_auto,q_auto/v1/jeffercbs/yuder91ssszbnqz1wyio"
 createdAt: "03/16/2025"
-medium: "https://jeffercbs.medium.com/nuevo-compilador-nativo-en-go-promete-velocidades-10x-m%C3%A1s-r%C3%A1pidas-c2454bc5deea"
 tags:
-  - TypeScript
-  - Go
+  - typeScript
+  - golang
+  - compilador
 ---
 
 import Aside from "@/components/mdx/Aside.astro"
