--- a/src/data/blog/configuracion-entorno-desarrollo-completa-guia.mdx
+++ b/src/data/blog/configuracion-entorno-desarrollo-completa-guia.mdx
@@ -1,8 +1,8 @@
 ---
 title: "La configuración de mi entorno de desarrollo"
 description: "Descubre que herramientas uso, la confuración de mi editor, extensiones y más."
+cover: "https://res.cloudinary.com/jeffercbs/image/upload/f_auto,q_auto/v1/jeffercbs/qtbvq2ddiln50uonhukt"
 draft: true
-cover: "./images/banner.webp"
 createdAt: "03/16/2025"
 tags:
   - vscode
