--- a/src/data/blog/guia-completa-funcionamiento-internet-explicado.mdx
+++ b/src/data/blog/guia-completa-funcionamiento-internet-explicado.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cómo funciona Internet"
-description: "Descubre cómo funciona Internet: cables submarinos, servidores y DNS explicados de forma sencilla. Aprende cómo la información viaja instantáneamente por la red global que conecta nuestro mundo."
+description: "Internet explicado: recorrido sencillo por los cables submarinos, servidores y DNS que permiten la comunicación instantánea en nuestra red global."
 cover: "https://res.cloudinary.com/jeffercbs/image/upload/f_auto,q_auto/v1/jeffercbs/nmvmulb2fn7fkq2ec8vn"
 createdAt: "02/18/2025"
 type: "youtube"
