--- a/src/data/blog/rust-desarrollo-web-evolucion-beneficios.mdx
+++ b/src/data/blog/rust-desarrollo-web-evolucion-beneficios.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Rust en Desarrollo Web"
-description: "Descubre cómo Rust está impulsando el desarrollo de herramientas, desde linters y compiladores hasta frameworks."
+description: "Descubre cómo Rust está impulsando el desarrollo de herramientas como linters y compiladores más rapidos."
+cover: "https://res.cloudinary.com/jeffercbs/image/upload/f_auto,q_auto/v1/jeffercbs/qtbvq2ddiln50uonhukt"
 draft: true
-cover: "./images/banner.webp"
 createdAt: "01/17/2025"
 tags:
   - rust
