Enhance syntax highlighting in MDX, update service titles in English and Spanish, and upgrade package dependencies

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -195,7 +195,7 @@
       "ICON": "code"
     },
     {
-      "TITLE": "Tech Mentoring",
+      "TITLE": "Mentoring",
       "DESCRIPTION": "Need support with your IT project or want to deepen your knowledge? I provide guidance for business projects and university students looking to improve their technical skills. Move forward with confidence!",
       "ICON": "lightbulb",
       "LINK": "/services/mentoring"
