--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -180,7 +180,7 @@
       "ICON": "code"
     },
     {
-      "TITLE": "Mentorías Tecnológicas",
+      "TITLE": "Mentorías",
       "DESCRIPTION": "¿Necesitas apoyo en tu proyecto TI o profundizar en temas específicos? Te brindo asesoría tanto para proyectos empresariales como para estudiantes universitarios que desean mejorar sus conocimientos. ¡Avanza con confianza!",
       "ICON": "lightbulb",
       "LINK": "/services/mentoring"
