--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -192,19 +192,14 @@
     {
       "TITLE": "Professional Web Development",
       "DESCRIPTION": "I help you create the perfect website for your brand or business. I design custom solutions that reflect your identity and attract your ideal customers. Ready to stand out online?",
-      "ICON": "code"
+      "ICON": "code",
+      "LINK": "/contact"
     },
     {
       "TITLE": "Mentoring",
       "DESCRIPTION": "Need support with your IT project or want to deepen your knowledge? I provide guidance for business projects and university students looking to improve their technical skills. Move forward with confidence!",
       "ICON": "lightbulb",
       "LINK": "/services/mentoring"
-    },
-    {
-      "TITLE": "Direct Contact",
-      "DESCRIPTION": "Do you have a project in mind or need specialized advice? Share your details and let's talk about how I can help you achieve your goals. Taking the first step is just a click away!",
-      "ICON": "handshake",
-      "LINK": "/contact"
     }
   ],
   "BECAUSE": [
